Add Prisma PostgreSQL integration for product management

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
-# Admin Credentials (copy this file to .env and fill in values)
-ADMIN_USERNAME=username
-ADMIN_PASSWORD=password
+# Admin Credentials
+ADMIN_USERNAME=avriyyy23
+ADMIN_PASSWORD=avriyyy23
+
+# Database (Prisma Postgres / Supabase / Other PostgreSQL)
+DATABASE_URL="postgresql://username:password@host:5432/database"
+DIRECT_URL="postgresql://username:password@host:5432/database"
