--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
 		"tailwindcss": "^4.1.17",
 		"typescript": "^5.9.3",
 		"vite": "^7.2.2"
+	},
+	"dependencies": {
+		"@prisma/client": "^7.1.0",
+		"prisma": "^7.1.0"
 	}
 }
