--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 	},
 	"dependencies": {
 		"@prisma/client": "6.7.0",
+		"@types/nodemailer": "^7.0.4",
+		"nodemailer": "^7.0.11",
 		"prisma": "6.7.0"
 	}
 }
